--- a/SKIRT_parameters.yml
+++ b/SKIRT_parameters.yml
@@ -16,4 +16,6 @@ OutputFilepaths:
   storeParticlesPath: "/cosma/home/do019/dc-gebe1/" # Folder where the .txt particle files are stored
   SKIRTinputFilePath: '/Users/agebek/Downloads/' # Path where the SKIRT input files will be stored
 
-
+SelectionCriteria:
+  minStellarMass: 1e9 # Lower stellar mass limit for halo selection in Msun
+  maxStellarMass: 1.05e9 # Lower stellar mass limit for halo selection in Msun
