--- a/SKIRT_parameters.yml
+++ b/SKIRT_parameters.yml
@@ -15,7 +15,8 @@ OutputFilepaths:
   sampleFolder: "/cosma/home/do019/dc-gebe1/" # Folder where the galaxy sample .txt files are stored.
   storeParticlesPath: "/cosma/home/do019/dc-gebe1/" # Folder where the .txt particle files are stored
   SKIRTinputFilePath: '/Users/agebek/Downloads/' # Path where the SKIRT input files will be stored
+  skiFilepath: ""
 
 SelectionCriteria:
   minStellarMass: 1e9 # Lower stellar mass limit for halo selection in Msun
-  maxStellarMass: 1.05e9 # Lower stellar mass limit for halo selection in Msun
+  maxStellarMass: 1.05e9 # Upper stellar mass limit for halo selection in Msun
