--- a/SKIRT_parameters.yml
+++ b/SKIRT_parameters.yml
@@ -1,6 +1,6 @@
-InputFilepaths:
+ColibreFilepaths:
   simPath: "/cosma8/data/dp004/colibre/Runs/{simName}"
-  skiFilepath: "/Users/agebek/Projects/Colibre/colibre-skirt/template_v{skifileversion}.ski"
+  sampleFolder: "/cosma/home/do019/dc-gebe1/"
 
   catalogueFile: "{simPath}/SOAP/halo_properties_{snap_nr:04d}.hdf5"
 
@@ -11,11 +11,12 @@ InputFilepaths:
   snapshotFile: "{simPath}/snapshots/colibre_{snap_nr:04d}.hdf5"
   membershipFile: "{simPath}/SOAP/membership_{snap_nr:04d}.hdf5"
 
-OutputFilepaths:
-  sampleFolder: "/cosma/home/do019/dc-gebe1/" # Folder where the galaxy sample .txt files are stored.
-  storeParticlesPath: "/cosma/home/do019/dc-gebe1/" # Folder where the .txt particle files are stored
+SkirtFilepaths:
+  skiFilepath: "/Users/agebek/Projects/Colibre/colibre-skirt/template_v{skifileversion}.ski"
+  sampleFolder: "/Users/agebek/Downloads/" # Folder where the galaxy sample .txt files are stored.
+  storeParticlesPath: "/Users/agebek/Downloads/" # Folder where the .txt particle files are stored
   SKIRTinputFilePath: '/Users/agebek/Downloads/' # Path where the SKIRT input files will be stored
-  skiFilepath: ""
+  SKIRToutputFilePath: '/Users/agebek/Downloads/' # Path where the SKIRT output files will be stored
 
 SelectionCriteria:
   minStellarMass: 1e9 # Lower stellar mass limit for halo selection in Msun
